[tool.poetry]
name = "seleniumproject1"
version = "0.1.0"
description = ""
authors = ["Reynaldo <103986622+JackerManXD@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
webdriver-manager = "^4.0.1"
selenium = "^4.13.0"
beautifulsoup4 = "^4.12.2"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
